2010-08-30  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] WebKit DOM bindings build should not depend on output GNUMakefile
        https://bugs.webkit.org/show_bug.cgi?id=44805

        Move WebKit DOM bindings build rules to bindings/gobject/GNUmakefile.am to
        prevent full WebKit API rebuilds when the automake files change.

        No new tests as this is just a build change.

        * bindings/gobject/GNUmakefile.am: Added.

2010-08-30  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Yury Semikhatsky.

        Web Inspector: event listener properties are rendered as [object Object].
        https://bugs.webkit.org/show_bug.cgi?id=44779

        * inspector/front-end/EventListenersSidebarPane.js:

2010-08-30  Ryuan Choi  <ryuan.choi@samsung.com>

        Unreviewed build fix with Blob Support

        [EFL] Build break with Blob support
        https://bugs.webkit.org/show_bug.cgi?id=44858

        No new features added, so no new tests.

        * CMakeLists.txt:

2010-08-30  Andras Becsi  <abecsi@webkit.org>

        Unreviewed trivial fix.

        [Qt] Let qmake know about HTML parser headers.

        No new tests needed.

        * WebCore.pro:

2010-08-30  Andras Becsi  <abecsi@webkit.org>

        Unreviewed build fix.

        [Qt] Fix fileapi header paths to fix warnings after r66365.

        No new tests needed.

        * WebCore.pro:

2010-08-30  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Kent Tamura.

        REGRESSION(r66355): Fix warnings in html/DateComponents.cpp
        https://bugs.webkit.org/show_bug.cgi?id=44855

        * html/DateComponents.cpp:
        (WebCore::DateComponents::setMillisecondsSinceEpochForWeek): Suggested parentheses added around && within ||

2010-08-30  Csaba Osztrogonác  <ossy@webkit.org>

        Reviewed by Darin Adler.

        REGRESSION(r66324): Fix warnings in editing/ApplyStyleCommand.cpp